<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".MainActivity"
        >

    <item
            android:id="@+id/action_login"
            android:title="@string/action_login"
            android:showAsAction="never"
            />

    <item
            android:id="@+id/action_sort_posts"
            android:title="@string/action_sort_posts"
            android:icon="@drawable/ic_action_content_sort_dark"
            app:showAsAction="ifRoom"
            >

        <menu>
            <item
                    android:id="@+id/action_sort_hot"
                    android:title="@string/action_sort_hot"
                    />
            <item
                    android:id="@+id/action_sort_new"
                    android:title="@string/action_sort_new"
                    />
            <item
                    android:id="@+id/action_sort_rising"
                    android:title="@string/action_sort_rising"
                    />
            <item
                    android:id="@+id/action_sort_controversial"
                    android:title="@string/action_sort_controversial"
                    />
            <item
                    android:id="@+id/action_sort_top"
                    android:title="@string/action_sort_top"
                    />
        </menu>

    </item>

    <item
            android:id="@+id/action_go_to_subreddit"
            android:title="@string/action_go_to_subreddit"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_manage_subreddits"
            android:title="@string/action_manage_subreddits"
            app:showAsAction="never"
            />

    <item
            android:id="@+id/action_logout"
            android:title="@string/action_logout"
            android:showAsAction="never"
            />

</menu>
