<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <item
                android:id="@+id/action_done"
                android:title="@string/action_done"
                android:icon="@drawable/ic_action_action_done"
                app:showAsAction="ifRoom"
                />

        <item
                android:id="@+id/action_select_all"
                android:title="@string/action_select_all"
                android:showAsAction="never"
                />

        <item
                android:id="@+id/action_deselect_all"
                android:title="@string/action_deselect_all"
                android:showAsAction="never"
                />

</menu>